# skia

./: BUILD.gn  spxbuild.txt
gn/: BUILD.gn  BUILDCONFIG.gn
gn/skia/: BUILD.gn
gn/toolchain/: BUILD.gn
include/codec/: SkCodec.h
include/private/: SkEncodedInfo.h
include/private/chromium/: Slug.h
modules/skcms/: BUILD.gn  skcms.h
src/codec/: SkAvifCodec.cpp  SkCodec.cpp
src/ports/: SkDebug_stdio.cpp  SkFontConfigInterface_direct.cpp  SkFontHost_FreeType.cpp  SkFontHost_FreeType_common.h  SkOSFile_win.cpp
src/utils/win/: SkWGL_win.cpp
