# Copyright 2022 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("skcms.gni")

static_library("skcms") {
  cflags = [ "-DSKIA_IMPLEMENTATION" ]
  if (!is_win || is_clang) {
    if (is_win) {
      cflags += [ "/std:c11" ]
    } else {
      cflags += [ "-std=c11" ]
    }
  }

  public = skcms_public_headers
  sources = skcms_sources
}
